# Supetelebot

TelegramProBot/: .replit  admin_routes.py  app.py  board_renderer.py  bot.py  chess_engine.py  config.py  main.py  models.py  pyproject.toml  real_time_monitor.py  replit.md  routes.py  start_bot.py  utils.py  webhook_handler.py
TelegramProBot/attached_assets/: INSTRUCTIONS_FRANCAIS_1755234587209.md  README_DEPLOYMENT_1755234587270.md  RESUME_FONCTIONNALITES_1755234587305.md  board_render_1755234587103.py  bot_interface_1755234587141.py  bot_modern_1755234587180.py  pyproject_1755234587239.toml
TelegramProBot/static/css/: admin.css
TelegramProBot/static/js/: admin.js  realtime.js
TelegramProBot/templates/: admin_dashboard.html  admin_games.html  admin_user_detail.html  admin_users.html  base.html  login.html  monitor.html
