[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-socketio>=5.5.1",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "chess>=1.11.2",
    "sqlalchemy>=2.0.43",
    "python-telegram-bot>=22.3",
    "python-chess>=1.999",
    "cairosvg>=2.8.2",
    "flask-login>=0.6.3",
    "telegram>=0.0.1",
    "werkzeug>=3.1.3",
]
